# lcogt-commissioning

./: .dockerignore  .gitignore  Changenotes  Dockerfile  README.md  archonlabptc.sh  crawlgain.sh  pyproject.toml  requirements.txt  setup.py
Sophia/: nano-shutter-control.py
allocationtools/: query_rti.py  reduced_startdates_coj.csv  reduced_startdates_ogg.csv  submit_RTI_blocks.py
experimental/: ana_drive.py  linearitytest.ipynb  mitcosmos.ipynb  submitnresiglabias.py
illustration/: time-aperture.py
lcocommissioning/: astigmatismmap.py  crosstalk.py  darklinearity.py  ef_focuscalibration.py  focusmap.py  gaiaastrometryservicetools.py  noise_analysis.py  noisegainrawmef.py  submitNameModeTest.py  submitXtalkObservation.py
lcocommissioning/archon/: archon_v02_plus.py  archonexpose.py  arconexpose.py
lcocommissioning/cdk/: ana_search.py  deltarhofocuscurve.py  elongation_assessment.py  sq_overheads.ipynb  submit_cdk_observation.py
lcocommissioning/cmostest/: binningspeed.py  bypixelnoise.py  getqhyccdframe.py  telegraphfit.py
lcocommissioning/cmostest/qhyccdpython/: libqhy.py  qhyccd.py
lcocommissioning/common/: Image.py  SourceCatalogProvider.py  ccd_noisegain.py  common.py  lco_archive_utilities.py  lco_ccdlab.py  logging_config.py  muscatfocusdb_orm.py  noisegaindb_orm.py
lcocommissioning/floyds/: compareFloydsSpectra.py  submitFloydsCalibration.py  submitFloydsObservation.py
lcocommissioning/focus/: ef_focuscalibration.py  focuscurve.py  focusmap.py  focustrends.py
lcocommissioning/gpstiming/: analyseSequence.py  timingfitter.py
lcocommissioning/guide/: annotate_lco_guideframe.py
lcocommissioning/muscat/: muscat_focus.py  muscat_focustrends.py  sdktiming.py  submitMuscatObservation.py  trim_muscat_calibs.py
lcocommissioning/nres/: make_nres_exposure_meter_plot.py  plot_nres_1d.py  rverrsn.ipynb  submitNRESObservation.py
lcocommissioning/sbig/: burstlinearity.py  get_sbig_frame.py  sbigapi.json
noisegaincrawler/: analysegainhistory.py  crawl_noisegain.py  webapp.py
notebooks/: dark_current-1.ipynb  exposuretime_stats.ipynb  nres_rv_standards.ipynb  shutterresponsetime.ipynb
src/lcocommissioning/: gaiaastrometryservicetools.py
src/lcocommissioning/cmostest/: getqhyccdframe.py
src/lcocommissioning/common/: Image.py  common.py  noisegaindb_orm.py
src/lcocommissioning/floyds/: submitFloydsObservation.py
src/lcocommissioning/focus/: ef_focuscalibration.py
src/lcocommissioning/gpstiming/: analyseSequence.py
src/lcocommissioning/muscat/: muscat_focus.py
src/noisegaincrawler/: analysegainhistory.py  crawl_noisegain.py
tests/: test_archive.py
(+1 files in other folders)
